# pplx-research

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/man/: pplx-research.1
mcp/: README.md  install.sh  server.py
scripts/: install-skill.sh
skills/pplx-research/: README.md  SKILL.md
skills/pplx-research/examples/: agent-workflow.sh  deep-research.sh  quick-lookup.sh  synthesis-compare.sh
skills/pplx-research/references/: api-reference.md  modes.md  output-formats.md
skills/pplx-research/scripts/: install.sh  verify.sh
src/pplx_research/: __init__.py  cli.py  engine.py  sdk.py
tests/: test_engine.py  test_sdk.py
