[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pplx-research"
version = "1.0.1"
description = "Monolithic research CLI powered by Perplexity Sonar API with auto-classification and iterative gap analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "kleinpanic", email = "kleinpanic@users.noreply.github.com"}
]
keywords = ["perplexity", "research", "cli", "ai", "sonar", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pplx-research = "pplx_research.cli:main"

[project.urls]
Homepage = "https://github.com/kleinpanic/pplx-research"
Documentation = "https://github.com/kleinpanic/pplx-research#readme"
Repository = "https://github.com/kleinpanic/pplx-research.git"
Issues = "https://github.com/kleinpanic/pplx-research/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/pplx_research --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
